started working on calculating score

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 .RData
 rsconnect
 .Rproj.user/9DA39F07/sources/prop/INDEX
+.Rproj.user/9DA39F07/sources/prop/INDEX
+.Rproj.user/9DA39F07/sources/prop/INDEX
