--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: EJmap
-Title: What the Package Does (One Line, Title Case)
+Title: Environmental Justice Mapping Tool
 Version: 0.0.0.9000
 Authors@R: 
     person("Mariel", "Sorlien", , "msorlien@nbep.org", role = c("aut", "cre"),
